// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxLabel /> Default story renders snapshot 1`] = `
<label
  class="label label--md"
  data-bootstrap-override="label"
  for="id"
  style="--checkbox-svg-size: 1.25rem;"
>
  Short label
</label>
`;

exports[`<CheckboxLabel /> Disabled story renders snapshot 1`] = `
<div>
  <label
    class="label label--md label--disabled"
    data-bootstrap-override="label"
    for="id"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Short label
  </label>
  <br />
  <label
    class="label label--sm label--disabled"
    data-bootstrap-override="label"
    for="id"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Short label
  </label>
  <br />
  <label
    class="label label--md label--disabled"
    data-bootstrap-override="label"
    for="id"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </label>
  <br />
  <label
    class="label label--sm label--disabled"
    data-bootstrap-override="label"
    for="id"
    style="--checkbox-svg-size: 1.25rem;"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </label>
</div>
`;

exports[`<CheckboxLabel /> LongLabels story renders snapshot 1`] = `
<label
  class="label label--md"
  data-bootstrap-override="label"
  for="id"
  style="--checkbox-svg-size: 1.25rem;"
>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit
</label>
`;

exports[`<CheckboxLabel /> Small story renders snapshot 1`] = `
<label
  class="label label--sm"
  data-bootstrap-override="label"
  for="id"
  style="--checkbox-svg-size: 1.25rem;"
>
  Short label
</label>
`;
